<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondodegradado"
    tools:context=".mostrarDatos">


        <TextView
            android:id="@+id/lbDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/fuzzybubbles"
            android:text="Mis datos personales"
            android:textColor="@color/white"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.487"
            app:layout_constraintStart_toStartOf="@+id/imageView5"
            app:layout_constraintTop_toBottomOf="@+id/imageView5" />


        <TextView
            android:id="@+id/mostrarRut"
            android:layout_width="361dp"
            android:layout_height="26dp"
            android:drawableStart="@drawable/nombre_icono"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/fuzzybubbles"
            android:hint="@string/txtRutDato"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textColorHint="@color/ColorHind"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lbDatos"
            app:layout_constraintVertical_bias="0.051" />

        <TextView
            android:id="@+id/mostrarNombre"
            android:layout_width="361dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/nombre_icono"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/fuzzybubbles"
            android:hint="@string/txtNombreDato"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textColorHint="@color/ColorHind"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/mostrarRut"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mostrarRut"
            app:layout_constraintTop_toBottomOf="@+id/mostrarRut" />

        <TextView
            android:id="@+id/mostrarApellido"
            android:layout_width="361dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/apellido_icono"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/fuzzybubbles"
            android:hint="@string/txtApellidoDato"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textColorHint="@color/ColorHind"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/mostrarNombre"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mostrarNombre"
            app:layout_constraintTop_toBottomOf="@+id/mostrarNombre" />

        <TextView
            android:id="@+id/mostrarFecha"
            android:layout_width="361dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/calendario_icono"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/fuzzybubbles"
            android:hint="@string/txtFechaDato"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textColorHint="@color/ColorHind"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/mostrarApellido"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mostrarApellido"
            app:layout_constraintTop_toBottomOf="@+id/mostrarApellido" />

        <TextView
            android:id="@+id/mostrarCorreo"
            android:layout_width="361dp"
            android:layout_height="26dp"
            android:layout_marginTop="56dp"
            android:drawableStart="@drawable/correo_icono"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/fuzzybubbles"
            android:hint="@string/txtCorreoDato"
            android:importantForAutofill="no"
            android:textColor="@color/white"
            android:textColorHint="@color/ColorHind"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/mostrarApellido"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/mostrarApellido"
            app:layout_constraintTop_toBottomOf="@+id/mostrarApellido" />

        <TextView
            android:id="@+id/mostrarPassword"
            android:layout_width="361dp"
            android:layout_height="26dp"
            android:layout_marginTop="16dp"
            android:drawableStart="@drawable/password_icono"
            android:drawablePadding="10dp"
            android:ems="10"
            android:fontFamily="@font/fuzzybubbles"
            android:hint="@string/txtPasswordDato"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:textColorHint="@color/ColorHind"
            android:textSize="15dp"
            app:layout_constraintEnd_toEndOf="@+id/mostrarCorreo"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/mostrarCorreo"
            app:layout_constraintTop_toBottomOf="@+id/mostrarCorreo" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="165dp"
            android:layout_height="167dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.056"
            app:srcCompat="@drawable/iconousuario" />

        <Button
            android:id="@+id/btnEditPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Actualizar Contraseña"
            android:background="@drawable/colordegradado2"
            android:fontFamily="@font/fuzzybubbles"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btnEditDatos"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/btnEditDatos"
            app:layout_constraintTop_toBottomOf="@+id/btnEditDatos"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnEditDatos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="Actualizar Datos"
            android:background="@drawable/colordegradado"
            android:fontFamily="@font/fuzzybubbles"
            android:shadowColor="#000000"
            android:shadowDx="2"
            android:shadowDy="5"
            android:shadowRadius="10"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:layout_constraintEnd_toEndOf="@+id/mostrarPassword"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="@+id/mostrarPassword"
            app:layout_constraintTop_toBottomOf="@+id/mostrarPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>